Upgrade to clap 4
I did this because clap 2 and 3 has a dependency on
atty which is unmaintained and has a potential security
vulnerability https://rustsec.org/advisories/RUSTSEC-2021-0145

clap 4 migration details:
- Arg::with_name() has been replaced with Arg::new()
- possible_values has been replaced with value_parser
- args.value_of has been replaced with args.get_one::<String>
- args.gen_completions_to() has been replaced with generate()
- The way we use args.is_present() means it is replaced with
  contains_id()
- Shell completion has been moved to the clap_complete crate

- app_from_crate! has been replaced with command!
  * Which now requires a the `cargo` feature flag to access

- line wrapping is now behind a feature flag `wrap_help`
  * Migration guide recommends we enable this or else
    we would need to manually implement line wrapping

- Args are now assumed to take values by default
  so in order to specify a flag
  we need to append .action(ArgAction::SetTrue) to each arg.
  * takes_value() has been removed

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,7 @@ include = [
     "Cargo.*",
     "*.md",
 ]
-rust-version = "1.64.0"
+rust-version = "1.74.1"
 
 [[bin]]
 name = "git-absorb"
@@ -26,7 +26,8 @@ version = "0.18"
 default-features = false
 
 [dependencies]
-clap = "2.33"
+clap = { version = "4", features = ["cargo", "wrap_help"] }
+clap_complete = "4"
 slog = "2.5"
 slog-term = "2.6"
 slog-async = "2.5"
